# FaustPackageManager

./: .gitignore  CMakeLists.txt  MakeFile  Makefile  main.cpp
Downloader/: CMakeLists.txt  GithubDownloader.cpp  GithubDownloader.h
Exceptions/: CMakeLists.txt
PkgUrl/: CMakeLists.txt  PkgUrl.cpp
Registry/: Registry.cpp  Registry.h
include/: DownloadException.h  PkgUrl.h  Registry.h
pkgUrl/: PkgUrl.h  PkgUrlExcption.h
src/: PkgUrl.cpp  Registry.cpp
